[tool.poetry]
name = "bad-substances"
version = "0.1.0"
description = "A program to identify bad substances"
authors = ["Lundez <hampus.londogard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.5.0"
easyocr = "^1.4.1"
opencv-python-headless = "4.4.0.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
